Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- Enhancement #1807 : Provide a mean to publish all the contents of a tree
  structure in one go.
Bug fixes
~~~~~~~~~
- Fixed #1806 "Fields with errors have their error message not associated them
  and too far below".
- Fix: modified date on folder contents are wrong and not sorted correctly.
  now display proxy.modified vs doc.modified
New internal features
~~~~~~~~~~~~~~~~~~~~~
- metafactory's driven replay_profiles start by reinstalling the base profile
- doctest doc/developer/metafactory.txt doesn't depend on python-ldap anymore.