@@ -11,6 +11,7 @@ Bug fixes
   and too far below".
 - Fix: modified date on folder contents are wrong and not sorted correctly.
   now display proxy.modified vs doc.modified
+- Can run without ExternalEditor
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - metafactory's driven replay_profiles start by reinstalling the base profile
